[package]
name = "ebpf-kern"
version = "0.1.7"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Kernel space wrapper for libbpf"
repository = "https://github.com/vlad9486/ebpf-tools"

[dependencies]
cty = "0.2"
ebpf-kern-macros = { version = "0.1.7", path = "macros", optional = true }

[features]
macros = ["ebpf-kern-macros"]
