[package]
name = "ebpf-user"
version = "0.1.6"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "User space wrapper for libbpf"
repository = "https://github.com/vlad9486/ebpf-tools"

[dependencies]
libbpf-sys = "0.3.0-1"
cty = "0.2"
ebpf-user-macros = { version = "0.1.4", path = "macros", optional = true }

[features]
macros = ["ebpf-user-macros"]
