[package]
name = "ebpf-kern-macros"
version = "0.1.4"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Kernel space macros for libbpf"
repository = "https://github.com/vlad9486/ebpf-tools"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
syn = { version = "1.0.69", features = ["derive", "parsing"] }
quote = "1.0.9"
